changing docker image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   ana-site:
     container_name: ana_site
     image: beagalmeida/ana-capis:v0.0.1 
+    platform: linux/amd64
     restart: always
     ports: 
     - 3000:3000
